No references to homosexuality
I noticed this string in a translation file (PO file):
No references to homosexuality
The description of this project ends with:
[...]to filter or limit the access of child accounts to inappropriate content.
I have not tried malcontent yet (could not find it in GNOME Software) so have not yet seen the string in use but i am guessing it might be in a list of things you can check that you don't want a child to watch.
So it sounds like homosexuality is somehow inappropriate content. If that is the case how is homosexuality inappropriate content?
Some other related strings:
Indirect references to homosexuality
Graphic sexual behavior between people of the same gender
Kissing between people of the same gender
Some other strings that might be interesting:
Negativity towards a specific group of people
Explicit discrimination based on gender, sexuality, race or religion
If someone is able to take some screenshots that would be nice.